--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@slack/bolt": "^2.2.3",
+    "@slack/client": "^5.0.2",
     "@slack/rtm-api": "^5.0.5",
     "axios": "^0.19.2",
     "eslint-plugin-node": "^11.1.0",
