--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "^7.6.0"
   },
   "scripts": {
-    "lint": "eslint index.js",
+    "lint": "eslint index.js \"libs/**\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
